- Feature: Made parsing of files more robust. This became necessary after the
           recent spike in obfuscated ActionScript code malware.
- Feature: Unknown ActionScript 2 instructions are now shown in the GUI with
           their action code.
- Bugfix: In previous versions, the ActionScript 2 actions belonging to a
          DoAction tag were not shown in the Flash Dissector tree. This has
	  been fixed.
- Bugfix: In previous versions, the ActionScript 2 actions belonging to a
          DoInitAction tag were not shown in the Flash Dissector tree. This has
	  been fixed.
- Bugfix: The constant list defined by an ActionScript 2 ConstantPool
          instruction is now better formatted for improved readability.
- Bugfix: ActionScript 2 Push instructions were not previously not shown in the
          GUI.
- Bugfix: ActionScript 2 PushDuplicate instructions were not previously not
          shown in the GUI.
- Bugfix: ActionScript 2 Pop instructions were not previously not in the GUI.
- Bugfix: ActionScript 2 Play instructions were not previously not in the GUI.
- Bugfix: ActionScript 2 PreviousFrame instructions were not previously not
          shown in the GUI.
- Bugfix: ActionScript 2 RandomNumber instructions were not previously not
          shown in the GUI.

Version 1.1 (May 7th 2011):

- Feature: Much improved display of ActionScript 3 code
- Feature: Improved the Minimizer to give more status information
- Feature: Added a way to dump decompressed Flash files to disk from the GUI
- Feature: Opening SWF files via drag&drop is now possible in Flash Dissector
- Feature: Added source setup and installation information to the readme file
- Feature: Added the changes.txt file
- Bugfix: Fixed a bug in the Minimizer that led to nullpointer exceptions when
          the output results directory could not be determined
- Bugfix: Fixed a bug when parsing negative signed 3-byte integer values

Version 1.0 (April 21st 2011):

- Initial release