@@ -468,6 +468,11 @@ public final class AS2CodePrinter {
 			}
 
 			@Override
+			protected void visit(final ActionRemoveSprite instruction) {
+				add(sb, "RemoveSprite");
+			}
+
+			@Override
 			protected void visit(final ActionSetMember instruction) {
 				add(sb, "SetMember");
 			}
